se agrego  hasta filtering